# Friday

./: .gitattributes  .gitignore  ActionEngine.h  CMakeLists.txt  GeminiBrain.cpp  GeminiBrain.h  README.md  SystemMonitor.h  VoiceEar.cpp  VoiceEar.h  friday.cpp  friday.h  friday.ui  main.cpp  resources.qrc
